@@ -60,11 +60,7 @@ _ipmi_oem_intelnm_sdr_callback (ipmi_sdr_ctx_t sdr_ctx,
 {
   struct ipmi_oem_intelnm_sdr_callback *sdr_callback_arg;
   ipmi_oem_state_data_t *state_data;
-  fiid_obj_t obj_oem_record = NULL;
-  int expected_record_len;
-  uint8_t record_subtype;
-  uint8_t version_number;
-  uint64_t val;
+  int ret;
   int rv = -1;
 
   assert (sdr_ctx);
@@ -77,124 +73,30 @@ _ipmi_oem_intelnm_sdr_callback (ipmi_sdr_ctx_t sdr_ctx,
   
   if (record_type != IPMI_SDR_FORMAT_OEM_RECORD)
     return (0);
-  
-  if ((expected_record_len = fiid_template_len_bytes (tmpl_sdr_oem_intel_node_manager_record)) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "fiid_template_len_bytes: %s\n",
-		       strerror (errno));
-      goto cleanup;
-    }
-  
-  if (expected_record_len < sdr_record_len)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-  
-  if (!(obj_oem_record = fiid_obj_create (tmpl_sdr_oem_intel_node_manager_record)))
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "fiid_obj_create: %s\n",
-                       strerror (errno));
-      goto cleanup;
-    }
 
-  if (fiid_obj_set_all (obj_oem_record,
-			sdr_record,
-			sdr_record_len) < 0)
+  if ((ret = ipmi_sdr_oem_parse_intel_node_manager (sdr_ctx,
+						    sdr_record,
+						    sdr_record_len,
+						    sdr_callback_arg->target_slave_address,
+						    sdr_callback_arg->target_lun,
+						    sdr_callback_arg->target_channel_number,
+						    NULL,
+						    NULL,
+						    NULL,
+						    NULL)) < 0)
     {
       pstdout_fprintf (state_data->pstate,
 		       stderr,
-		       "fiid_obj_set_all: %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
+		       "ipmi_sdr_oem_parse_intel_node_manager: %s\n",
+		       ipmi_sdr_ctx_errormsg (sdr_ctx));
       goto cleanup;
     }
   
-  /* achu: Node Manager documentation states that OEM ID in the
-   * SDR record should be Intel's, but I've seen motherboards w/o
-   * it, so don't bother checking.
-   */
+  if (ret)
+    sdr_callback_arg->found = 1;
+  rv = ret;
 
-  if (FIID_OBJ_GET (obj_oem_record,
-		    "record_subtype",
-		    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "fiid_obj_get: 'record_subtype': %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  record_subtype = val;
-
-  if (record_subtype != IPMI_SDR_OEM_INTEL_NODE_MANAGER_RECORD_SUBTYPE_NM_DISCOVERY)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-
-  if (FIID_OBJ_GET (obj_oem_record,
-		    "version_number",
-		    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "fiid_obj_get: 'version_number': %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  version_number = val;
-  
-  if (version_number != IPMI_SDR_OEM_INTEL_NODE_MANAGER_DISCOVERY_VERSION)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-
-  if (FIID_OBJ_GET (obj_oem_record,
-		    "nm_device_slave_address",
-		    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "FIID_OBJ_GET: 'nm_device_slave_address': %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  (*(sdr_callback_arg->target_slave_address)) = val;
-  
-  if (FIID_OBJ_GET (obj_oem_record,
-		    "sensor_owner_lun",
-		    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "FIID_OBJ_GET: 'sensor_owner_lun': %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  (*(sdr_callback_arg->target_lun)) = val;
-
-  if (FIID_OBJ_GET (obj_oem_record,
-		    "channel_number",
-		    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "FIID_OBJ_GET: 'channel_number': %s\n",
-		       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  (*(sdr_callback_arg->target_channel_number)) = val;
-  
-  sdr_callback_arg->found = 1;
-  rv = 1;
-  
  cleanup:
-  fiid_obj_destroy (obj_oem_record);
   return (rv);
 }
 
