@@ -3,7 +3,10 @@
 	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr-oem.h,
 	libfreeipmi/sdr/ipmi-sdr-oem.c: New files.
 
-	* ipmi-sensors/: Use new ipmi_sdr_oem_parse_intel_node_manager.
+	* ipmi-sensors/, ipmi-oem/: Use new
+	ipmi_sdr_oem_parse_intel_node_manager.
+
+	* libfreeipmi/api/: Increase default ipmb timeout.
 	
 2012-07-10  Albert Chu <chu11@llnl.gov>
 
